Update IT Consulting description in index.html

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
           <h3 class="text-2xl font-semibold mb-2 text-blue-700">
             IT Consulting
           </h3>
-          <p>Professional IT support and infrastructure planning.</p>
+          <p>Professional IT support, Infrastructure planning, Business Analytics Services & Business Process Mapping Services.</p>
         </div>
         <div
           class="p-6 bg-gray-50 rounded-xl shadow card-hover card-tilt reveal group cursor-pointer"
