Update phone number format in contact card

--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
           <div class="contact-card p-6 bg-white rounded-xl shadow-lg">
             <div class="text-4xl mb-3 animate-float animation-delay-200">📞</div>
             <div class="font-semibold text-blue-900 text-lg mb-2">Phone</div>
-            <div><a href="tel:09029788052" class="text-blue-700 hover:underline font-medium">0902 978 8052</a></div>
+            <div><a href="tel:09029788052" class="text-blue-700 hover:underline font-medium">+234 902 978 8052</a></div>
           </div>
           <div class="contact-card p-6 bg-white rounded-xl shadow-lg">
             <div class="text-4xl mb-3 animate-float animation-delay-400">📧</div>
