--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
           <div class="contact-card p-6 bg-white rounded-xl shadow-lg">
             <div class="text-4xl mb-3 animate-float animation-delay-400">📧</div>
             <div class="font-semibold text-blue-900 text-lg mb-2">Email</div>
-            <div><a href="mailto:ifedayoakisanya@gmail.com" class="text-blue-700 hover:underline font-medium break-all">info.ay3services@gmail.com</a></div>
+            <div><a href="mailto:ifedayoakisanya@gmail.com" class="text-blue-700 hover:underline font-medium break-all">info@ay3services.com</a></div>
           </div>
           <div class="contact-card p-6 bg-white rounded-xl shadow-lg">
             <div class="text-4xl mb-3 animate-float animation-delay-600">🕐</div>
